# shellzilla

./: .commitlint.js  .gitignore  CHANGELOG.md  README.md  UPDATELOG.md  package.json
.github/workflows/: build.yml  release.yml
scripts/: release.mjs  updatelog.mjs  updater.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs  menu.rs
src/components/: editor.vue
