[package]
name = "shellzilla"
version = "1.0.0"
description = "IOT device"
authors = ["mengdemao"]
license = "Apache-2.0"
repository = "https://github.com/mengdemao/shellzilla.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
